syntax = "proto3";

package proto;
option go_package = "./;proto";


message PingRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 17;
  }

  int32 retcode = 9;
  uint32 seq = 4;
  uint32 client_time = 8;
}
